@@ -33,6 +33,8 @@
 -- require VERSION
 -- fix read-only values
 -- $\
+-- caller() now works "natively", decoding the Java stack trace
+-- symbol tables like %:: and typeglobs support
 
 9.022 cpan:Perlito5  2017-05-xx
 - Parser:
